# eurorack-modules

./: README.md
ADSR Envelope/: ADSR Envelope-B_Mask.gbr  ADSR Envelope-B_Paste.gbr  ADSR Envelope-B_Silkscreen.gbr  ADSR Envelope-Edge_Cuts.gbr  ADSR Envelope-F_Silkscreen.gbr  ADSR Envelope-job.gbrjob  ADSR Envelope.csv  ADSR Envelope.drl  ADSR Envelope.kicad_pcb  ADSR Envelope.xml  Analog.kicad_sch  fp-info-cache
ADSR Envelope/Fab Files/: ADSR Envelope-B_Mask.gbr  ADSR Envelope-F_Cu.gbr  ADSR Envelope-F_Paste.gbr  ADSR Envelope-F_Silkscreen.gbr  ADSR Envelope-drl_map.gbr  ADSR Envelope.drl
ADSR Envelope/Firmware/adsr-envelope/: Cargo.toml  justfile  memory.x
ADSR Envelope/Firmware/adsr-envelope/.cargo/: config.toml
ADSR Envelope/Firmware/adsr-envelope/src/: main.rs
ADSR Envelope/Hardware/: ADSR Envelope-B_Cu.gbr  ADSR Envelope-F_Cu.gbr  ADSR Envelope-F_Mask.gbr  ADSR Envelope-F_Paste.gbr  ADSR Envelope.kicad_prl  ADSR Envelope.kicad_pro  ADSR Envelope.kicad_sch  Microcontroller.kicad_sch  ~ADSR Envelope.kicad_sch.lck
ADSR Envelope/Hardware/Fab Files/: ADSR Envelope-B_Cu.gbr  ADSR Envelope-B_Paste.gbr  ADSR Envelope-B_Silkscreen.gbr  ADSR Envelope-Edge_Cuts.gbr  ADSR Envelope-F_Mask.gbr  ADSR Envelope-job.gbrjob
VCA/: VCA-B_Cu.gbr  VCA-B_Mask.gbr  VCA-B_Paste.gbr  VCA-B_Silkscreen.gbr  VCA-Edge_Cuts.gbr  VCA-F_Cu.gbr  VCA-F_Mask.gbr  VCA-F_Paste.gbr  VCA-F_Silkscreen.gbr  VCA-drl_map.gbr  VCA-job.gbrjob  VCA.csv  VCA.drl  VCA.kicad_pcb  VCA.kicad_prl  VCA.kicad_pro  VCA.kicad_sch  VCA.xml  fp-info-cache
